# pybind11-macos-test

./: .gitmodules  CMakeLists.txt  README.md  environment.yml  pyproject.toml  test.py
.github/workflows/: test_binding.yml
dummy_module/: __init__.py
src/: binding.cc  cpp.cc  cpp.hh  root.hh
test/: test_import_pip_package.py
