[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dummy_module"
version = "0.0.1"
authors = [
  { name="Damien Gilliard", email="damiengilliard@outlook.com" },
]
description = "A small dummy package for test purposes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DamienGilliard/pybind11-macos-test"
Issues = "https://github.com/DamienGilliard/pybind11-macos-test/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dummy_module"]
exclude = []

[tool.setuptools.package-data]
dummy_module = ["*.so"]